# pyrinha

./: .env  db.py  models.py  pyproject.toml
